force-app/main/default/objects/XactlyExpress__XCCreditResult__c/XactlyExpress__XCCreditResult__c.object-meta.xml
<CustomObject>
    <label>XCCreditResult</label>
    <nameField>
        <label>XCCreditResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCCreditResult</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>