force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__AdjustedBeginMTDCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AdjustedBeginMTDCredit__c</fullName>
    <label>AdjustedBeginMTDCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>