force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__AdjustedBeginQTDCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AdjustedBeginQTDCredit__c</fullName>
    <label>AdjustedBeginQTDCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>