force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__AdjustedBeginYTDCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AdjustedBeginYTDCredit__c</fullName>
    <label>AdjustedBeginYTDCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>