force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__AdjustedQTDMonthlyAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AdjustedQTDMonthlyAttainment__c</fullName>
    <formula>IF(XactlyExpress__QTDMonthlyQuota__c = 0, 0, XactlyExpress__AdjustedQTDCredit__c / XactlyExpress__QTDMonthlyQuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdjustedQTDMonthlyAttainment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>