force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__AnnualAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AnnualAttainment__c</fullName>
    <formula>IF(XactlyExpress__AnnualQuota__c == 0, 0, XactlyExpress__YTDCredit__c / XactlyExpress__AnnualQuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnnualAttainment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>