force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__MonthlyAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MonthlyAttainment__c</fullName>
    <formula>IF(XactlyExpress__MonthlyQuota__c = 0, 0, XactlyExpress__MTDCredit__c / XactlyExpress__MonthlyQuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MonthlyAttainment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>