force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__MTDCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MTDCredit__c</fullName>
    <label>MTDCredit</label>
    <summarizedField>XactlyExpress__XCCreditDealResult__c.XactlyExpress__Credit__c</summarizedField>
    <summaryForeignKey>XactlyExpress__XCCreditDealResult__c.XactlyExpress__CreditResultID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>