force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__QTDCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__QTDCredit__c</fullName>
    <formula>XactlyExpress__BeginQTDCredit__c +  XactlyExpress__MTDCredit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QTDCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>