force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__QuarterlyAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__QuarterlyAttainment__c</fullName>
    <formula>IF(XactlyExpress__QuarterlyQuota__c = 0, 0, XactlyExpress__QTDCredit__c / XactlyExpress__QuarterlyQuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuarterlyAttainment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>