force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__RSumCreditDealResult__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__RSumCreditDealResult__c</fullName>
    <label>RSumCreditDealResult</label>
    <summaryForeignKey>XactlyExpress__XCCreditDealResult__c.XactlyExpress__CreditResultID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>