force-app/main/default/objects/XactlyExpress__XCCreditResult__c/fields/XactlyExpress__YTDMonthlyAttainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__YTDMonthlyAttainment__c</fullName>
    <formula>IF(XactlyExpress__YTDMonthlyQuota__c = 0, 0, XactlyExpress__YTDCredit__c / XactlyExpress__YTDMonthlyQuota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTDMonthlyAttainment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>